# artemis-port2cpp

./: CMakeLists.txt  ProjectHome.md  sample.cpp
artemis/: Aspect.cpp  Aspect.h  Component.h  ComponentManager.cpp  ComponentManager.h  ComponentMapper.cpp  ComponentMapper.h  ComponentType.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityObserver.h  EntitySystem.cpp  EntitySystem.h  EntitySystemType.h  Manager.h  ManagerType.h  World.cpp  World.h
artemis/managers/: GroupManager.h  PlayerManager.h  TagManager.h  TeamManager.h
artemis/systems/: DelayedEntityProcessingSystem.cpp  DelayedEntityProcessingSystem.h  EntityProcessingSystem.h  IntervalEntityProcessingSystem.h  IntervalEntitySystem.cpp  IntervalEntitySystem.h  VoidEntitySystem.h
artemis/utils/: Bag.h  FastMath.cpp  FastMath.h  Timer.h  TrigLUT.cpp  TrigLUT.h  Utils.h
